--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -12,14 +12,20 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#equivalent_systems'>Equivalent systems</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#equivalent_systems'>Equivalent systems</a>
+            <ul class='list-group list-group-flush py-0'>
+              <li class='list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#allowable force transformations'>Allowable force transformations</a></li>
+              <li class='list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#allowable moment transformations'>Allowable moment transformations</a></li>
+            </ul>
+          </li>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#concentrated_forces'>Concentrated forces</a></li>
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#distributed_loads'>Distributed loads</a></li>
-          <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rectangular_loading'>Rectangular loading</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#triangular_loading'>Triangular loading</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#nonuniform_distributed_loads'>Nonuniform distributed loads</a></li>
-          </ul>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#distributed_loads'>Distributed loads</a>
+            <ul class='list-group list-group-flush py-0'> 
+              <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rectangular_loading'>Rectangular loading</a></li>
+              <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#triangular_loading'>Triangular loading</a></li>
+              <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#nonuniform_distributed_loads'>Nonuniform distributed loads</a></li>
+            </ul>
+          </li>
       </ul>
       </div>
 
