--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -15,13 +15,16 @@ import InlineEquation from "../../components/InlineEquation.astro"
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#types_of_connections'>Types of connections</a></li> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#system_classifications'>System classifications</a></li>
-		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#redundant_constraints'>Redundant constraints</a></li>
-		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#proper_improper_constraints'>Proper and improper constraints</a></li>
-		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#stability_instability'>Stability and instability</a></li>
-			<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#applications'>Applications</a>
-				<ul class='list-group list-group-flush py-0'> 
-					<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href = '#track_and_field_starting_blocks'>Track and field starting blocks</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#system_classifications'>System classifications</a>
+			<ul class = 'list-group list-group-flush py-0'>
+				<li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#redundant_constraints'>Redundant constraints</a></li>
+				<li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#proper_constraints'>Proper and improper constraints</a></li>
+				<li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#stability'>Stability and instability</a></li>
+			</ul>
+		  </li>
+			<li class = 'list-group-item py-0'><a class = 'text-decoration-none subsection' href = '#applications'>Applications</a>
+				<ul class = 'list-group list-group-flush py-0'> 
+					<li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#track_and_field_starting_blocks'>Track and field starting blocks</a></li>
 				</ul>
 			</li>
       </ul>
