--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -20,7 +20,11 @@ import Warning from "../../components/Warning.astro"
   <ul class='list-group list-group-flush py-0'> 
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalars_vs_vectors'>Scalars vs. vectors</a>
         <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vectors'>Vectors</a></li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vectors'>Vectors</a>
+              <ul class = 'list-group list-group-flush py-0'>
+                <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsubsection' href = '#notation'>notation</a></li>
+              </ul>
+            </li> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#scalars'>Scalars</a></li> 
         </ul>
     </li> 
@@ -31,7 +35,11 @@ import Warning from "../../components/Warning.astro"
         </ul>
     </li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#unit_vectors'>Unit vectors</a></li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_magnitude_and_direction'>Vector magnitude and direction</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_magnitude_and_direction'>Vector magnitude and direction</a>
+      <ul class='list-group list-group-flush py-0'> 
+          <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#directional_cosines'>Directional cosines</a></li>
+      </ul>
+    </li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalar_and_vector_products'>Scalar and vector products</a>
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#dot_product'>Dot product</a>
