--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -18,9 +18,8 @@ import Example from "../../components/Example.astro"
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#assumptions'>Frames</a></li> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#two_force_member'>Machines</a></li>
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#zero_force_member'>Frame and machine analysis</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#machines'>Machines</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#framemachineanalysis'>Frame and machine analysis</a></li>
       </ul>
       </div>
 <Section title="Frames" id="frames">
