--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -14,6 +14,8 @@ import Example from "../../components/Example.astro"
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#fluid_pressure'>Fluid pressure</a></li> 
+		  <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsection' href = '#fluid_pressure_FBD'>Pressure, distributed loads, and free body diagrams</a></li>
+		  <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsection' href = '#fluid_pressure_scs'>Fluid pressure with slanted and curved surfaces</a></li>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#buoyancy'>Buoyancy</a></li>
       </ul>
       </div>
@@ -109,7 +111,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 </SubSection>
 
-<SubSection title="Fluid pressure with slanted and curved surfaces" id="fluid_pressure_FBD">
+<SubSection title="Fluid pressure with slanted and curved surfaces" id="fluid_pressure_scs">
 
 <p> We will often be required to analyze the hydrostatic fluid pressure on surfaces that are not perfectly horizontal or vertical. In these cases, it is easier to redraw our system and create articifial horizontal and vertical "surfaces", adding the force from the FBD of the weight of the water trapped in our horizontal and vertical surfaces. 
 </p>
