--- a/src/pages/dyn/the_capsizing_ship.astro
+++ b/src/pages/dyn/the_capsizing_ship.astro
@@ -59,7 +59,7 @@ import CalloutContainerContainer from "../../components/special/CalloutContainer
         href="https://en.wikipedia.org/wiki/MV_Golden_Ray">capsized
         </a> on 8 September 2019 in 
         St. Simons Sound near the Port of Brunswick in Georgia, United States. 
-        Image Source: U.S. Coast Guard District 7 PADE. 
+        Image Source: U.S. Coast Guard District 7 PADE.
     </p>
     </Image>
 
@@ -164,7 +164,7 @@ import CalloutContainerContainer from "../../components/special/CalloutContainer
     
 
     <DisplayEquation background = True title = "Characteristic equation of a pendulum." id = "eqn-pend"
-    equation = "\\begin{aligned}   \\ddot \\theta  = - \\frac{g}{l} \\sin(\\theta)  \\end{aligned}">
+    equation = "\\begin{aligned}   \\ddot \\theta  = - \\frac{g}{l} \ \\sin(\\theta)  \\end{aligned}">
       
     </DisplayEquation>
         
