--- a/src/pages/sta/reaction_forces_applications.astro
+++ b/src/pages/sta/reaction_forces_applications.astro
@@ -52,7 +52,7 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
 <CalloutContainer slot = "cards">
 	<CalloutCard title = "Reference material">
 		<p>
-			This application uses <a target = "_blank" rel = "noopener noreferrer" href = "/sta/reaction_forces#types_of_connections">Types of connections.</a>
+			This application uses <a href = "/sta/reaction_forces#types_of_connections">Types of connections.</a>
 		</p>
 	</CalloutCard>
 </CalloutContainer>
@@ -68,7 +68,7 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
 	<CalloutContainer slot = "cards">
 		<CalloutCard title = "Reference material">
 			<p>
-				This application uses <a target = "_blank" rel = "noopener noreferrer" href = "/sta/reaction_forces#types_of_connections">Types of connections.</a>
+				This application uses <a href = "/sta/reaction_forces#types_of_connections">Types of connections.</a>
 			</p>
 		</CalloutCard>
 	</CalloutContainer>
