--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -50,12 +50,22 @@ A roller support only constrains movement in the y-direction, and thus only has 
 <CalloutContainer slot = "cards">
 	<CalloutCard title = "Application alert!">
 		<p>
-			<a href = "/sta/reaction_forces_applications#track_and_field_starting_blocks">Track and field starting blocks</a> use <strong>Types of connections</strong> by returning a force normal to the surface back into the runner.
+			<a href = "/sta/track_and_field_starting_blocks">Track and field starting blocks</a> use <strong>Types of connections</strong> by returning a force normal to the surface back into the runner.
+		</p>
+		<Image src = '/sta/reaction_forces/StartingBlocksFBD1.jpg' width = '8'>Image from <a target = "_blank" rel = "noopener noreferrer" href = "https://commons.wikimedia.org/wiki/File:2017-08-04-Matt_Duboff-4x100_(36378998635).jpg">Wikimedia.</a> CC BY 2.0</Image>
+		<p>
+			The resultant reaction force created by the applied forces can be calculated through basic vector addition.
 		</p>
 	</CalloutCard>
 	<CalloutCard title = "Application alert!">
 		<p>
-			The <a href = "/sta/reaction_forces_applications#krannert_center_parking_garage">Krannert Center parking garage</a> uses <strong>Types of connections</strong> by using roller supports.
+			The Krannert Center parking garage uses <strong>Types of connections</strong> by using roller supports.
+		</p>
+		<Image src = '/sta/reaction_forces/KrannertCenterParkingGarage.jpg' width = '8'/>
+		<p>
+			Here, roller supports are incorporated below columns supporting the roof of the Krannert Center parking garage.
+			These roller-type supports allow for horizontal movement but provide an upwards reaction force in the vertical direction.
+			You can learn more about the Krannert Center for the Performing Arts <a target = "_blank" rel = "noopener noreferrer" href = "https://krannertcenter.com/events/krannert-center-tours">here.</a>
 		</p>
 	</CalloutCard>
 </CalloutContainer>
