--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -7,16 +7,23 @@ import BlueText from "../../components/BlueText.astro"
 import SubSubSection from "../../components/SubSubSection.astro"
 import Enumerate from "../../components/Enumerate.astro"
 import Item from "../../components/Item.astro"
+import DisplayEquation from "../../components/DisplayEquation.astro"
+import InlineEquation from "../../components/InlineEquation.astro"
+import CalloutCard from "../../components/CalloutCard.astro"
+import CalloutContainer from "../../components/CalloutContainer.astro"
 ---
 <Layout title="Reaction forces">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#types_of_connections'>Types of connections</a></li> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#system_classifications'>System classifications</a></li>
-		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#redundant_constraints'>Redundant constraints</a></li>
-		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#proper_improper_constraints'>Proper and improper constraints</a></li>
-		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#stability_instability'>Stability and instability</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#system_classifications'>System classifications</a>
+			<ul class = 'list-group list-group-flush py-0'>
+				<li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#redundant_constraints'>Redundant constraints</a></li>
+				<li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#proper_constraints'>Proper and improper constraints</a></li>
+				<li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#stability'>Stability and instability</a></li>
+			</ul>
+		  </li>
       </ul>
       </div>
 <Section title="Reaction forces" id="reaction_forces">
@@ -26,7 +33,7 @@ Because of Newton's Third Law we know that every action has an equal and opposit
 </Section>
 <SubSection title="Types of connections" id="types_of_connections">
 
-Different supports and different connections have different types of reaction forces depending on what they are constraining. For example, a pin connection restricts movement in the x-and y-directions but doesn't restrict rotation. This means that each pin connection has two reaction forces: one in the x-direciton, and one in the y-direction corresponding to the degrees of freedom that are fixed. 
+Different supports and different connections have different types of reaction forces depending on what they are constraining. For example, a pin connection restricts movement in the x-and y-directions but doesn't restrict rotation. This means that each pin connection has two reaction forces: one in the x-direction, and one in the y-direction corresponding to the degrees of freedom that are fixed. 
 
 A roller support only constrains movement in the y-direction, and thus only has one reaction force (oriented in the y-direction). 
 
@@ -39,6 +46,29 @@ A roller support only constrains movement in the y-direction, and thus only has 
 <!-- From lecture 13 -->
 
 <!-- L13, Slide 3 had some good examples of support reactions if we want to make a pop up on the side eventually.-->
+
+<CalloutContainer slot = "cards">
+	<CalloutCard title = "Application alert!">
+		<p>
+			<a href = "/sta/track_and_field_starting_blocks">Track and field starting blocks</a> use <strong>Types of connections</strong> by returning a force normal to the surface back into the runner.
+		</p>
+		<Image src = '/sta/reaction_forces/StartingBlocksFBD1.jpg' width = '8'>Image from <a target = "_blank" rel = "noopener noreferrer" href = "https://commons.wikimedia.org/wiki/File:2017-08-04-Matt_Duboff-4x100_(36378998635).jpg">Wikimedia.</a> CC BY 2.0</Image>
+		<p>
+			The resultant reaction force created by the applied forces can be calculated through basic vector addition.
+		</p>
+	</CalloutCard>
+	<CalloutCard title = "Application alert!">
+		<p>
+			The Krannert Center parking garage uses <strong>Types of connections</strong> by using roller supports.
+		</p>
+		<Image src = '/sta/reaction_forces/KrannertCenterParkingGarage.jpg' width = '8'/>
+		<p>
+			Here, roller supports are incorporated below columns supporting the roof of the Krannert Center parking garage.
+			These roller-type supports allow for horizontal movement but provide an upwards reaction force in the vertical direction.
+			You can learn more about the Krannert Center for the Performing Arts <a target = "_blank" rel = "noopener noreferrer" href = "https://krannertcenter.com/events/krannert-center-tours">here.</a>
+		</p>
+	</CalloutCard>
+</CalloutContainer>
 
 </SubSection>
 
@@ -87,4 +117,5 @@ There are three ways we can analyze a 2D system to determine if it is stable or 
 </Enumerate>
 
 </SubSubSection>
+
 </Layout>
