--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -59,12 +59,13 @@ A roller support only constrains movement in the y-direction, and thus only has 
 	</CalloutCard>
 	<CalloutCard title = "Application alert!">
 		<p>
-			The Krannert Center parking garage uses <strong>Types of connections</strong> by using roller supports.
+			The Krannert Center parking garage uses <strong>Types of connections</strong> by using elastomeric bearing pads.
 		</p>
 		<Image src = '/sta/reaction_forces/KrannertCenterParkingGarage.jpg' width = '8'/>
 		<p>
-			Here, roller supports are incorporated below columns supporting the roof of the Krannert Center parking garage.
-			These roller-type supports allow for horizontal movement but provide an upwards reaction force in the vertical direction.
+			Elastomeric bearing pads are incorporated below columns supporting the roof of the Krannert Center parking garage.
+			Elastomeric bearing pads behave similarly to roller supports in that they allow for horizontal movement, but provide an upwards reaction force in the vertical direction.
+			Learn more about elastomeric bearing pads <a target = "_blank" rel = "noopener noreferrer" href = "https://en.wikipedia.org/wiki/Elastomeric_bridge_bearing">here.</a>
 			You can learn more about the Krannert Center for the Performing Arts <a target = "_blank" rel = "noopener noreferrer" href = "https://krannertcenter.com/events/krannert-center-tours">here.</a>
 		</p>
 	</CalloutCard>
